added React using import statements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <h1>HTML HEADING with HTML Tags!!</h1>
      </div>
  
-     <script>
+     <!-- <script>
          //creating javascript element h1
          var hOne = document.createElement("h1");
          hOne.innerHTML = "HEADING with Javascript";
@@ -30,6 +30,7 @@
          var htmlRoot = document.getElementById("root");
          var rootReact = ReactDOM.createRoot(htmlRoot);
          rootReact.render(hOneReact);
-     </script>
+     </script> -->
+     <script type="module" src="./App.js"></script>
  </body>
  </html>
